Bug 1227207 - throw correct error type.  r=jorendorff